# VisionProyecto

./: .gitignore  1.avif  CMakeLists.txt  CMakeLists.txt.autosave  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ram.py
filters/: dds.h  mainfilter.cpp  mainfilter.h
filters/filter_bilateral/: filter_bilateral.cpp  filter_bilateral.h
filters/filter_bitwise/: bitwise.cpp  bitwise.h
filters/filter_bordes/: bordes.cpp  bordes.h
filters/filter_color_thresh/: color_thresh.cpp  color_thresh.h
filters/filter_contrast/: contrast.cpp  contrast.h
filters/filter_morfologia/: morfologia.cpp  morfologia.h
filters/filter_pixel_ops/: pixel_ops.cpp  pixel_ops.h
filters/filter_suavizado/: suavizado.cpp  suavizado.h
filters/filter_thresholding/: threshold.cpp  threshold.h
frontend/: slicepage.cpp  slicepage.h  welcomepage.cpp  welcomepage.h
frontend/frontend/: slicepage.h
frontend/welcomepage/: welcomepage.h
nifti_loader/: nifti_loader.cpp  nifti_loader.h
slice_extractor/: slice_extractor.cpp  slice_extractor.h
utils/: utils_main.h
utils/nifti_utils/: nifti_utils.cpp  nifti_utils.h
utils/slice_renderer/: slice_renderer.cpp  slice_renderer.h
utils/statics_generator/: statistics.cpp  statistics.h  statswindow.cpp  statswindow.h
